grid-template-rows: auto 1fr 63px;

--- a/style/main.less
+++ b/style/main.less
@@ -493,23 +493,23 @@ footer{
 
     }
     .nav__section__one{
-        background: #0b3d88;
+        background: #CEAB93;
         grid-area: nav__section__one;
     }
     .nav__section__two{
-        background: #852158;
+        background: #AD8B73;
         grid-area: nav__section__two;
     }
     .paragraph__section{
-        background: #b6a12c;
+        background: #C3B091;
         grid-area: paragraph__section;
     }
     .subscribe__section{
-        background: #93a597;
+        background: #FFEDDB;
         grid-area: subscribe__section;
     }
     .follow_us_container{
-        background: #3014ad;
+        background: #DBE2EF;
         grid-area: follow_us_container;
     }
     
