--- a/style/main.less
+++ b/style/main.less
@@ -464,6 +464,14 @@ img{
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 //////////////////////////////////////grid//////////////////////////
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
+
+
+:root{
+    --main-radius:5px;
+    --main-padding:10px;
+}
+
+
 footer{
     margin-top: 200px;
 }
@@ -485,32 +493,45 @@ footer{
             "grid__section nav__section__one nav__section__two follow_us_container";
 
         grid-gap: 0.2rem;
+        //text-align: center;
         
     }
     .grid__section{
         background: #222831;
         grid-area: grid__section;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
 
     }
     .nav__section__one{
         background: #CEAB93;
         grid-area: nav__section__one;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
     }
     .nav__section__two{
         background: #AD8B73;
         grid-area: nav__section__two;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
     }
     .paragraph__section{
         background: #C3B091;
         grid-area: paragraph__section;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
     }
     .subscribe__section{
         background: #FFEDDB;
         grid-area: subscribe__section;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
     }
     .follow_us_container{
         background: #DBE2EF;
         grid-area: follow_us_container;
+        border-radius: var(--main-radius);
+        padding-top: var(--main-padding);
     }
     
 
@@ -525,10 +546,10 @@ footer{
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 
     .copyright__section{
-        padding-top: 50px;
+        margin-top: 50px;
         padding-bottom: 50px;
         border-top: 1px solid rgba(255, 255, 255, 0.1) !important;
-        margin-top: 50px;
+        
         display: flex;
         justify-content: center;
         align-items: center;
@@ -720,6 +741,19 @@ body._lock{
 }
 
 
+.footer__container{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
+    grid-template-areas: 
+        "follow_us_container follow_us_container"
+        "grid__section grid__section"
+        "subscribe__section subscribe__section"
+        "paragraph__section paragraph__section"
+        "nav__section__two nav__section__one"
+        
+
+
+}
 
 
 
