--- a/style/main.less
+++ b/style/main.less
@@ -504,30 +504,42 @@ footer{
 
     }
     .nav__section__one{
+        text-align: center;
         background: #CEAB93;
         grid-area: nav__section__one;
         border-radius: var(--main-radius);
         padding-top: var(--main-padding);
     }
     .nav__section__two{
+        text-align: center;
         background: #AD8B73;
         grid-area: nav__section__two;
         border-radius: var(--main-radius);
         padding-top: var(--main-padding);
     }
     .paragraph__section{
+        text-align: center;
         background: #C3B091;
         grid-area: paragraph__section;
         border-radius: var(--main-radius);
         padding-top: var(--main-padding);
     }
     .subscribe__section{
+        .footer-heading{
+            text-align: center;
+        }
+        .subscribe__button{
+            display: flex;
+
+        }
+        justify-content: center;
         background: #FFEDDB;
         grid-area: subscribe__section;
         border-radius: var(--main-radius);
         padding-top: var(--main-padding);
     }
     .follow_us_container{
+        text-align: center;
         background: #DBE2EF;
         grid-area: follow_us_container;
         border-radius: var(--main-radius);
@@ -755,7 +767,11 @@ body._lock{
 
 }
 
-
+.footer__listmenu{
+    li{
+        margin-bottom: 10px;
+    }
+}
 
 }
 
