--- a/style/main.less
+++ b/style/main.less
@@ -430,14 +430,15 @@ body._mobile .menu__list > li._active .menu__sub-list{
     gap: 1em;
 
 
-    grid-template-columns: repeat(2, 1fr) 2fr;
-    grid-template-rows: auto 1fr 63px;
-
-
-
-
-
+    grid-template-columns: repeat(2, 1fr) 1fr;
+    grid-template-rows: auto 1fr 78px;
 }
+
+
+
+
+
+
 
 img{
     width: 100%;
@@ -760,6 +761,8 @@ body._lock{
 
 
 .footer__container{
+    row-gap: 10px;
+    column-gap: 20px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
     grid-template-areas: 
