grid-auto-rows: 40px grid-auto-columns: 228px;df

--- a/style/main.less
+++ b/style/main.less
@@ -518,7 +518,7 @@ footer{
         grid-area: nav__section__two;
         border-radius: var(--main-radius);
         padding-top: var(--main-padding);
-        grid-auto-columns: 228px;
+        
     }
     .paragraph__section{
         text-align: center;
@@ -542,6 +542,11 @@ footer{
         padding-top: var(--main-padding);
     }
     .follow_us_container{
+        
+
+       
+
+
         text-align: center;
         background: #DBE2EF;
         grid-area: follow_us_container;
@@ -777,11 +782,60 @@ body._lock{
 
 
 }
+.nav__section__two{
+   
+    grid-auto-columns: 228px;
+}
+
+
+
 
 .grid__container{
-     
+    
     grid-auto-rows: 40px;
 }
+
+body .footer__container .follow_us_container{
+        
+    .footer-heading{
+        margin-bottom: 15px;
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+    
+}
+body .footer__container .subscribe__section{
+        
+    .footer-heading{
+        margin-bottom: 15px;
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+    
+}
+
+body .footer__container .paragraph__section{
+        
+    .footer-heading{
+        margin-bottom: 15px;
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+    
+}
+
 
 }
 
