--- a/style/main.css
+++ b/style/main.css
@@ -360,7 +360,6 @@ footer {
   grid-area: nav__section__two;
   border-radius: var(--main-radius);
   padding-top: var(--main-padding);
-  grid-auto-columns: 228px;
 }
 .paragraph__section {
   text-align: center;
@@ -541,7 +540,37 @@ footer {
     grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
     grid-template-areas: "follow_us_container follow_us_container" "grid__section grid__section" "subscribe__section subscribe__section" "paragraph__section paragraph__section" "nav__section__two nav__section__one";
   }
+  .nav__section__two {
+    grid-auto-columns: 228px;
+  }
   .grid__container {
     grid-auto-rows: 40px;
+  }
+  body .footer__container .follow_us_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  body .footer__container .follow_us_container .footer-heading {
+    margin-bottom: 15px;
+  }
+  body .footer__container .subscribe__section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  body .footer__container .subscribe__section .footer-heading {
+    margin-bottom: 15px;
+  }
+  body .footer__container .paragraph__section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  body .footer__container .paragraph__section .footer-heading {
+    margin-bottom: 15px;
   }
 }
