--- a/style/main.css
+++ b/style/main.css
@@ -325,7 +325,6 @@ img {
 }
 :root {
   --main-radius: 5px;
-  --main-padding: 20px;
 }
 footer {
   margin-top: 200px;
@@ -333,17 +332,21 @@ footer {
 .footer__container {
   display: grid;
   height: 100%;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
-  grid-template-areas: "grid__section nav__section__one nav__section__two paragraph__section" "grid__section nav__section__one nav__section__two paragraph__section" "grid__section nav__section__one nav__section__two subscribe__section" "grid__section nav__section__one nav__section__two follow_us_container";
+  grid-template-columns: 1fr 0.6fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "grid__container nav__section__one nav__section__two paragraph__section" "grid__container nav__section__one nav__section__two paragraph__section" "grid__container nav__section__one nav__section__two subscribe__section" "grid__container nav__section__one nav__section__two subscribe__section" "grid__container nav__section__one nav__section__two follow_us_container" "grid__container nav__section__one nav__section__two follow_us_container" "grid__container nav__section__three nav__section__three nav__section__three" "grid__container nav__section__three nav__section__three nav__section__three";
   grid-gap: 0.2rem;
 }
-.footer__container .grid__container {
-  display: grid;
+.footer__container .flex_center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 20px;
 }
-.grid__section {
-  background: #222831;
-  grid-area: grid__section;
+.grid__container {
+  background: #FFEDDB;
+  grid-area: grid__container;
   border-radius: var(--main-radius);
   padding-top: var(--main-padding);
 }
@@ -353,11 +356,20 @@ footer {
   grid-area: nav__section__one;
   border-radius: var(--main-radius);
   padding-top: var(--main-padding);
+  grid-auto-rows: 40px;
 }
 .nav__section__two {
   text-align: center;
   background: #AD8B73;
   grid-area: nav__section__two;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-padding);
+  grid-auto-rows: 40px;
+}
+.nav__section__three {
+  text-align: center;
+  background: #AD8B73;
+  grid-area: nav__section__three;
   border-radius: var(--main-radius);
   padding-top: var(--main-padding);
 }
@@ -389,7 +401,12 @@ footer {
   padding-top: var(--main-padding);
 }
 .footer__listmenu li {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+.footer-heading {
+  margin-bottom: 25px;
+  font-size: 18px;
+  font-weight: 600;
 }
 .copyright__section {
   margin-top: 50px;
@@ -537,14 +554,8 @@ footer {
     row-gap: 10px;
     column-gap: 20px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
-    grid-template-areas: "follow_us_container follow_us_container" "grid__section grid__section" "subscribe__section subscribe__section" "paragraph__section paragraph__section" "nav__section__two nav__section__one";
-  }
-  .nav__section__two {
-    grid-auto-columns: 228px;
-  }
-  .grid__container {
-    grid-auto-rows: 40px;
+    grid-template-rows: 1fr 2fr 1fr 1fr 2fr 2fr;
+    grid-template-areas: "follow_us_container follow_us_container" "grid__container grid__container" "subscribe__section subscribe__section" "paragraph__section paragraph__section" "nav__section__two nav__section__one" "nav__section__three nav__section__three";
   }
   body .footer__container .follow_us_container {
     display: flex;
