--- a/style/main.css
+++ b/style/main.css
@@ -293,6 +293,96 @@ body._mobile .menu__list > li._active .menu__sub-list {
   transform: translate(0px, 0px);
   pointer-events: all;
 }
+body {
+  margin: 0;
+  height: 100vn;
+  background: white;
+}
+.container {
+  width: 100%;
+  margin: 15em auto;
+  text-align: center;
+}
+.container .content h1 {
+  font-size: 3em;
+  margin-top: 1em;
+}
+.container .content p {
+  font-size: 1.6em;
+  width: 50%;
+  margin: 0 auto;
+}
+.deer {
+  clip-path: url(#deermask);
+  width: 40%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  transform: rotate(100deg);
+  animation: deer 5s infinite alternate-reverse ease-in-out;
+}
+.deer-container {
+  position: relative;
+}
+.deer__logo1,
+.deer__logo2,
+.deer__logo3 {
+  position: absolute;
+  filter: drop-shadow(22px -12px 7px rgba(0, 0, 0, 0.5));
+}
+.deer__logo1 {
+  top: 20%;
+  left: 29%;
+  width: 5%;
+  transform: rotate(100deg);
+  animation: deer__logo1 5s infinite alternate-reverse;
+}
+.deer__logo2 {
+  top: 34%;
+  left: 28%;
+  width: 3%;
+  transform: rotate(110deg);
+  animation: deer__logo2 2s infinite alternate-reverse ease-in-out;
+}
+.deer__logo3 {
+  top: 40%;
+  left: 55%;
+  width: 3%;
+  transform: rotate(210deg);
+  filter: drop-shadow(-22px -12px 7px rgba(0, 0, 0, 0.5));
+  animation: deer__logo3 8s infinite alternate-reverse ease-in-out;
+}
+@keyframes deer__logo1 {
+  from {
+    transform: translateY(20px) rotate(100deg);
+  }
+  to {
+    transform: translateY(0px) rotate(120deg);
+  }
+}
+@keyframes deer__logo2 {
+  from {
+    transform: translateY(0px) rotate(110deg);
+  }
+  to {
+    transform: translateY(10px) rotate(90deg);
+  }
+}
+@keyframes deer__logo3 {
+  from {
+    transform: translateY(30px) rotate(210deg);
+  }
+  to {
+    transform: translateY(0px) rotate(230deg);
+  }
+}
+@keyframes deer {
+  from {
+    transform: translateY(20px) rotate(100deg);
+  }
+  to {
+    transform: translateY(0px) rotate(120deg);
+  }
+}
 .grid__section {
   background: rgba(66, 61, 61, 0.048);
   padding: 2em;
@@ -302,19 +392,23 @@ body._mobile .menu__list > li._active .menu__sub-list {
   grid-template-columns: repeat(2, 1fr) 1fr;
   grid-template-rows: auto 1fr 78px;
 }
-img {
-  width: 100%;
-  height: 100%;
+.deerimg {
   object-fit: cover;
   aspect-ratio: 1/1;
 }
 .one {
+  height: 100%;
+  width: 100%;
   grid-area: one;
 }
 .two {
+  height: 100%;
+  width: 100%;
   grid-area: two;
 }
 .three {
+  height: 100%;
+  width: 100%;
   grid-area: three;
 }
 .content {
@@ -330,6 +424,7 @@ footer {
   margin-top: 200px;
 }
 .footer__container {
+  margin-top: -199px;
   display: grid;
   height: 100%;
   grid-template-columns: 1fr 0.6fr 1fr 1fr;
