--- a/style/main.css
+++ b/style/main.css
@@ -299,7 +299,7 @@ body {
   background: white;
 }
 .container {
-  width: 100%;
+  width: 40%;
   margin: 15em auto;
   text-align: center;
 }
@@ -528,6 +528,9 @@ footer {
   }
 }
 @media only screen and (max-width: 1900px) {
+  .container {
+    width: 100%;
+  }
   ._lock .menu__body::before {
     background-color: #00ADB5;
     border-bottom: 2px solid #222831;
