--- a/style/main.less
+++ b/style/main.less
@@ -418,7 +418,7 @@ body {
 }
 
 .container{
-    width: 100%;
+    width: 40%;
     margin: 15em auto;
     text-align: center;
     
@@ -770,7 +770,9 @@ footer{
 
 @media only screen and (max-width: 1900px){
    
-
+    .container{
+        width: 100%;
+    }
     
     ._lock .menu__body::before{
         background-color: #00ADB5; 
