--- a/style/main.less
+++ b/style/main.less
@@ -117,15 +117,16 @@ svg{
 
  .menu__link__footer::after{
     content: '';
-    width: 120px;
+    width: 6%;
     height: 2px;
     background-color: black;
     position: absolute;
-    left: 0;
-    bottom: -6px;
-    transform: scaleX(0);
-    transform-origin: left;
+    
+    transform: scaleX(0); 
+    transform-origin: center; 
     transition: transform 0.5s ease;
+    display: flex;
+    margin-top: 5px;
 }
 
 .menu__link__footer:hover::after{
@@ -172,14 +173,15 @@ svg{
     content: '';
     width: 100%;
     height: 2px;
-    background-color: @4;
+    background-color: white;
     position: absolute;
-    left: 0;
-    bottom: 15px;
     transform: scaleX(0);
     transform-origin: left;
     transition: transform 0.5s ease;
+    display: flex;
+    margin-top: 5px;
 }
+
 
 .menu__link:hover::after{
     transform: scaleX(1);
@@ -974,11 +976,20 @@ body .footer__container .paragraph__section{
     
 }
 
+.grid__section {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 0.2fr 1fr 1fr 1fr;
+    grid-template-areas:
+        "one header "
+        "one three "
+        "two three "
+        "content content ";
+
 
 }
 
 
-
+}
 
 
 
