--- a/style/main.less
+++ b/style/main.less
@@ -463,6 +463,11 @@ body {
     
     text-align: center;
     background: @4;
+
+    .svg__deer-container{
+        height: 1px;
+        
+    }
     .content{
         h1{
             font-size: 3em;
